@@ -17,9 +17,6 @@ rb-toggle-gui=Recipe Book
 [item-name]
 rb-crafter-blueprint=Temporary crafter blueprint
 
-[item-description]
-rb-crafter-blueprint=A temporary blueprint provided by the Recipe Book to quickly place a crafter with a specific recipe. Cannot be kept in the inventory or saved to the blueprint library.
-
 [rb-gui]
 add-to-favorites=Add to favorites
 blueprint-not-available=A blueprint is not available for this crafter.
@@ -37,8 +34,11 @@ decrease-tech-level=Decrease tech level
 favorites=Favorites
 fixed-recipe=Fixed recipe:
 fluid=Fluid
+fuel-acceleration-multiplier=Vehicle acceleration:
 fuel-categories=Fuel categories:
 fuel-category=Fuel category:
+fuel-emissions-multiplier=Fuel pollution:
+fuel-top-speed-multiplier=Vehicle top speed:
 fuel-value=Fuel value:
 general=General
 hidden-abbrev=(H)
